Adding 2 layer nueral network

--- a/Classification of Handwritten Digits using Two Hidden Layer Neural Network.ipynb
+++ b/Classification of Handwritten Digits using Two Hidden Layer Neural Network.ipynb
@@ -1042,7 +1042,9 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import tensorflow\n",
@@ -1090,7 +1092,7 @@
     "#classifier.add(Dense(output_dim=397,init='uniform',activation='relu',input_dim=784))\n",
     "classifier.add(Dense(activation=\"relu\",input_dim=784,units=397,kernel_initializer=\"uniform\"))\n",
     "#number of nodes in the hidden layer = avg(INNPUTLAYER + OUTPUTLAYER)\n",
-    "#classifier.add(Dense(activation=\"relu\",units=397,kernel_initializer=\"uniform\"))\n"
+    "classifier.add(Dense(activation=\"relu\",units=397,kernel_initializer=\"uniform\"))\n"
    ]
   },
   {
@@ -1197,7 +1199,11 @@
       "Epoch 35/100\n",
       "42000/42000 [==============================] - 132s 3ms/step - loss: 14.5140 - acc: 0.0995 - val_loss: 14.5618 - val_acc: 0.0966\n",
       "Epoch 36/100\n",
-      " 1030/42000 [..............................] - ETA: 1:58 - loss: 14.6784 - acc: 0.0893"
+      "42000/42000 [==============================] - 148s 4ms/step - loss: 14.5140 - acc: 0.0995 - val_loss: 14.5618 - val_acc: 0.0966\n",
+      "Epoch 37/100\n",
+      "42000/42000 [==============================] - 138s 3ms/step - loss: 14.5140 - acc: 0.0995 - val_loss: 14.5618 - val_acc: 0.0966\n",
+      "Epoch 38/100\n",
+      " 1990/42000 [>.............................] - ETA: 1:53 - loss: 14.7088 - acc: 0.0874"
      ]
     }
    ],
@@ -1425,7 +1431,7 @@
     "#classifier.add(Dense(output_dim=397,init='uniform',activation='relu',input_dim=784))\n",
     "classifier.add(Dense(activation=\"relu\",input_dim=784,units=397,kernel_initializer=\"uniform\"))\n",
     "#number of nodes in the hidden layer = avg(INNPUTLAYER + OUTPUTLAYER)\n",
-    "#classifier.add(Dense(activation=\"relu\",units=397,kernel_initializer=\"uniform\"))\n"
+    "classifier.add(Dense(activation=\"relu\",units=397,kernel_initializer=\"uniform\"))\n"
    ]
   },
   {
@@ -1454,7 +1460,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "hist = classifier.fit(X_train,y_train,batch_size=10,epochs=200,verbose=1, validation_split=0.3)"
@@ -1680,7 +1688,7 @@
     "#classifier.add(Dense(output_dim=397,init='uniform',activation='relu',input_dim=784))\n",
     "classifier.add(Dense(activation=\"relu\",input_dim=784,units=397,kernel_initializer=\"uniform\"))\n",
     "#number of nodes in the hidden layer = avg(INNPUTLAYER + OUTPUTLAYER)\n",
-    "#classifier.add(Dense(activation=\"relu\",units=397,kernel_initializer=\"uniform\"))\n"
+    "classifier.add(Dense(activation=\"relu\",units=397,kernel_initializer=\"uniform\"))\n"
    ]
   },
   {
@@ -1937,7 +1945,7 @@
     "#classifier.add(Dense(output_dim=397,init='uniform',activation='relu',input_dim=784))\n",
     "classifier.add(Dense(activation=\"relu\",input_dim=784,units=397,kernel_initializer=\"uniform\"))\n",
     "#number of nodes in the hidden layer = avg(INNPUTLAYER + OUTPUTLAYER)\n",
-    "#classifier.add(Dense(activation=\"relu\",units=397,kernel_initializer=\"uniform\"))\n"
+    "classifier.add(Dense(activation=\"relu\",units=397,kernel_initializer=\"uniform\"))\n"
    ]
   },
   {
@@ -2161,15 +2169,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2205,7 +2204,7 @@
     "#classifier.add(Dense(output_dim=397,init='uniform',activation='relu',input_dim=784))\n",
     "classifier.add(Dense(activation=\"relu\",input_dim=784,units=397,kernel_initializer=\"uniform\"))\n",
     "#number of nodes in the hidden layer = avg(INNPUTLAYER + OUTPUTLAYER)\n",
-    "#classifier.add(Dense(activation=\"relu\",units=397,kernel_initializer=\"uniform\"))\n"
+    "classifier.add(Dense(activation=\"relu\",units=397,kernel_initializer=\"uniform\"))\n"
    ]
   },
   {
